// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification can specify prefix and suffix filter rules 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {}
    ]
  },
  "resource": {
    "aws_s3_bucket": {
      "MyBucket_F68F3FF0": {
        "bucket_prefix": "g-mybucket",
        "tags": {
          "Name": "Default-MyBucket",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_s3_bucket_notification": {
      "MyBucket_Notifications_46AC0CD2": {
        "bucket": "\${aws_s3_bucket.MyBucket_F68F3FF0.bucket}",
        "eventbridge": false,
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:*"
            ],
            "filter_prefix": "images/",
            "filter_suffix": ".png",
            "topic_arn": "ARN"
          }
        ]
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`notification when notification is added a custom s3 bucket notification resource is provisioned 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {}
    ]
  },
  "resource": {
    "aws_s3_bucket": {
      "MyBucket_F68F3FF0": {
        "bucket_prefix": "g-mybucket",
        "tags": {
          "Name": "Default-MyBucket",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_s3_bucket_notification": {
      "MyBucket_Notifications_46AC0CD2": {
        "bucket": "\${aws_s3_bucket.MyBucket_F68F3FF0.bucket}",
        "eventbridge": false
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
